--- a/CodeWar.css
+++ b/CodeWar.css
@@ -8,6 +8,9 @@ button {
     padding: 30px;
     /* font-size: 24px */
 }
+/* img {
+
+} */
 .Challenges{
     display: flex;
     justify-content: center;
